--- a/shop.html
+++ b/shop.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="shop.html">Tienda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Acerca de</a>
+                        <a class="nav-link" href="info.html">Acerca de</a>
                     </li>
                     <li class="nav-item">
                         <button class="btn btn-link" onclick="logout()">Cerrar Sesión</button>
