--- a/info.html
+++ b/info.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <script>
+        // Obtén el rol del usuario almacenado en localStorage
+        const userRole = localStorage.getItem("userRole");
+
+        if (userRole === "admin" ||userRole === "cliente"  ) {
+            // El usuario tiene el rol de "admin", puedes permitir el acceso al contenido de administrador.
+        } else {
+            // El usuario no tiene el rol de "admin", redirige o muestra un mensaje de acceso denegado.
+            window.location.href = "login.html"; // O redirige a otra página adecuada.
+        }
+
+    </script>
     <!-- Banner -->
     <div class="jumbotron ">
         <img src="https://i.imgur.com/Jn3cbJQ.png" class="banner" alt="Imagen del banner">
@@ -157,7 +169,6 @@ function logout() {
             window.location.href = "login.html"; // Redirige al usuario a la página de inicio de sesión
         }
 
-        const userRole = localStorage.getItem("userRole");
 
         if (userRole === "admin") {
             // Si el usuario es un administrador, mostrar el botón "Catálogo de Productos"
